2008-09-05  Michael Snyder  <msnyder@vmware.com>

	* gdb.twreverse/finish-reverse.exp: New file.
	* gdb.twreverse/return2-reverse.c: New file.
	* gdb.twreverse/Makefile.in: Add return2-reverse for make clean.

2008-09-04  Michael Snyder  <msnyder@vmware.com>

	* gdb.twreverse/return-reverse.exp: New file.
	* gdb.twreverse/return-reverse.c: New file.
	* gdb.twreverse/Makefile.in: Mention return-reverse for make clean.

2008-09-04  Michael Snyder  <msnyder@vmware.com>

	* gdb.twreverse/Makefile.in: Mention step-reverse for make clean.

2008-09-03  Michael Snyder  <msnyder@vmware.com>

	* gdb.twreverse/step-reverse.exp: Add tests for reverse stepi
	thru the return of a function (into callee).
	* gdb.twreverse/step-reverse.c: Ditto.

	* gdb.twreverse/step-reverse.exp: Add tests for reverse stepi
	thru a function call (back to caller).
	* gdb.twreverse/step-reverse.c: Ditto.

	* gdb.twreverse/step-reverse.exp: Add tests for reverse stepi.
	* gdb.twreverse/step-reverse.c: Ditto.

	* gdb.twreverse/step-reverse.exp: Add tests for stepping 
	backward into a function call.
	* gdb.twreverse/step-reverse.c: Ditto.

	* gdb.twreverse/step-reverse.exp: Add tests for reverse stepping 
	over, into, and out of a function call. 
	* gdb.twreverse/step-reverse.c: Ditto.

2008-09-01  Michael Snyder  <msnyder@vmware.com>

	* gdb.twreverse/step-reverse.exp: New file.
	* gdb.twreverse/step-reverse.c: New file.

2008-09-01  Michael Snyder  <msnyder@vmware.com>

	* gdb.twreverse: New directory (may be renamed later).
	* gdb.twreverse/Makefile.in: New file.
	* gdb.twreverse/break-reverse.exp: New file.
	* gdb.twreverse/break-reverse.c: New file.
	* configure.in: Add gdb.twreverse directory.
	* configure: Regenerate.

2008-07-17  Paul Pluzhnikov  <ppluzhnikov@google.com>

	* gdb.base/foll-fork.exp: Fix for Linux/VDSO failure.

2008-07-17  Paul Pluzhnikov  <ppluzhnikov@google.com>

	* gdb.base/coremaker.c: Fix for Linux failure in gdb.base/corefile.exp
